Require Index:parse() to provide a <srcfile> arg, empty str. means "in <args>".
Also fix 2-arg parse() call in extractdecls.lua.

--- a/README.adoc
+++ b/README.adoc
@@ -187,9 +187,8 @@ Binding for {clang_parseTranslationUnit}[clang_parseTranslationUnit]. This will
 parse a given source file `sourceFile` with the command line arguments `args`,
 which would be given to the compiler for compilation, containing e.g. include
 paths or defines.
-// XXX
-// If `sourceFile` is omitted (i.e. the arguments shifted left
-// by one), the source file is expected to be named in `args`.
+If `sourceFile` is the empty string, the source file is expected to be named in
+`args`.
 +
 The last optional argument `opts` is expected to be a sequence containing
 {TUFlags}[`CXTranslationUnit_*`] enum names without the `"CXTranslationUnit_"`
